--- a/Aboutus.html
+++ b/Aboutus.html
@@ -136,7 +136,7 @@
             <img src="ABHIJIT_VILAS_WAYAL_PHOTO.jpg" alt="Developer Photo">
             <div class="about-text">
                 <p>Hello, I am Abhijit Vilas Wayal currently pursuing MS in Business Analytics and Information Systems at University of South Florida.I have years of experience in solving business problems with expertise in requirements gathering, process improvement, predictive modeling and data visualization, leveraging SQL, Tableau, Power BI, and Python to extract insights from data to inform business decisions.</p>
-                <p>I have built this website as a project to showcase boat sales data and related analytics. I used HTML, CSS, and JavaScript to create this site. You can find the source code on my <a href="https://github.com/yourusername">GitHub account</a>.</p>
+                <p>I have built this website as a project to showcase boat sales data and related analytics. I used HTML, CSS, and JavaScript to create this site. You can find the source code on my <a href="https://github.com/abhijitvilaswayal/ISM6225_MyWeb_AVW">GitHub account</a>.</p>
             </div>
         </div>
         <!-- Add more content about your development process -->
